<resources>
    <string name="app_name">Elder Care</string>


    //TODOS LOS TEXTOS DE LA APP

    //TEXTO
    <string name="txt_elegir_cuenta">¿Como?</string>
    <string name="txt_usuario2">Usuario</string>
    <string name="txt_asistente">Asistente</string>
    <string name="txt_iniciar_sesion">¡Bienvenido!</string>
    <string name="txt_olvidaste_contra">Olvidaste tu Contraseña?</string>
    <string name="txt_no_cuenta">No tienes una Cuenta?</string>

    <string name="tv_nombre_lista">Nombre:</string>
    <string name="tv_telefono_lista">Telefono:</string>
    <string name="tv_especializacion_lista">Especializacion:</string>

    //PERFIL DE USUARIOS
    <string name="tv_mis_datos">Mis Datos Personales</string>
    <string name="tv_ui_dato">UId</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_telefono">Telefono</string>
    <string name="tv_constraseña">Contraseña</string>
    <string name="tv_precio">Precio</string>
    <string name="tv_especializacion">Especializacion</string>


    //CAJA DE TEXTO
    <string name="txt_usuario">Correo</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_descripcion">Especializacion</string>
    <string name="txt_telefono">Telefono</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="txt_confitmar_contraseña">Confirmar Contraseña</string>
    <string name="txt_enviar_correo">Correo Electronico</string>
    //BOTONES
    <string name="btn_iniciar">Iniciar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_mis_datos">Mis Datos</string>
    <string name="btn_asistentes">Buscar Asistente</string>
    <string name="btn_cerrar_sesion">Cerrar Sesion</string>
    <string name="btn_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="btn_actualizar_datos">Actualizar Datos</string>
    <string name="btn_enviar">Enviar Mensaje</string>
    <string name="btn_contratar">Contratar</string>
    //MENSAJES DE ERROR O AYUDA
    <string name="mnsj_text_ayuda">*Campo Obligatorio*</string>
    <string name="mnsj_text_ayuda_es">Enfermera, Compañera, Especialista</string>

</resources>