<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/portada_app"
    tools:context=".Activity_Usuario">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@mipmap/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/txt_nombre"
        app:startIconDrawable="@drawable/icono_perfil"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Correo2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/txt_correo"
        app:startIconDrawable="@drawable/icono_email_2"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Telefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_telefono"
        app:startIconDrawable="@drawable/icono_telefono"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:prefixText="+52 "
        app:prefixTextColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Correo2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/txt_password"
        app:startIconDrawable="@drawable/icono_password"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Telefono"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Confirm_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/txt_confitmar_contraseña"
        app:startIconDrawable="@drawable/icono_password"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Registrarme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/color_btn_iniciar"
        android:drawableLeft="@drawable/icono_registrar"
        android:drawableTint="@color/black"
        android:text="@string/btn_registrar"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>