<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/portada_app"
    app:cardBackgroundColor="@color/portada_app"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@color/portada_app"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Lista_Nombre_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nombre_lista"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Lista_Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Nombre"
                android:textColor="@color/color_btn_iniciar"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Lista_Telefono_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_telefono_lista"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Lista_Telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Telefono"
                android:textColor="@color/color_btn_iniciar"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Lista_Especializacion_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_especializacion_lista"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Lista_Especializacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Especializacion"
                android:textColor="@color/color_btn_iniciar"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>