<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/portada_app"
    tools:context=".Activity_Recuperar_Pass">

    <ImageView
        android:id="@+id/imageView_Recuperar"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@mipmap/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/Liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Recuperar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Favor de Ingresar su Correo de Elder Care
            recibiras un correo con las Instruciones para cambiar tu contraseña"
            android:textSize="20dp"
            android:textColor="@color/black"
            >

        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Recuperar_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/color_btn_iniciar"
        android:text="@string/btn_enviar"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Enviar_Correo"
        >

    </Button>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/txt_Enviar_Correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/txt_enviar_correo"
        app:startIconDrawable="@drawable/icono_email_2"
        app:startIconTint="@color/black"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/color_btn_iniciar"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:helperText="@string/mnsj_text_ayuda"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Liner3"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>